<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_scan_swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/choosedevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:fontFamily="sans-serif-thin"
            android:padding="5pt"
            android:text="@string/choosedevice"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="293dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="1"
            android:layout_weight="1.72"
            android:smoothScrollbar="true" />


        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:fontFamily="sans-serif-light"
            android:padding="4pt"
            android:text="@string/status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_column="0"
            android:layout_row="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:padding="4pt"
                android:text="@string/choosedata"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:entries="@array/items"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="3pt">

            <Button
                android:id="@+id/dcbutton"
                android:layout_width="wrap_content"

                android:layout_height="25pt"
                android:layout_column="3"
                android:layout_row="5"
                android:fontFamily="sans-serif-light"
                android:text="@string/disconnect" />

            <Button
                android:id="@+id/btnData"
                android:layout_width="wrap_content"
                android:layout_height="25pt"
                android:layout_column="8"
                android:layout_row="5"
                android:fontFamily="sans-serif-light"
                android:text="@string/viewdata" />


        </LinearLayout>


    </GridLayout>
</android.support.v4.widget.SwipeRefreshLayout>
